htdocs/stc/lj_base.css
form {
    margin: 0px;
    padding: 0px;
}

.ljclear {
    clear: both;
    margin: 0 -1px -1px 0;
    border: 0;
    padding: 0;
    width: 1px;
    height: 1px;
    font-size: 0;
    line-height: 0;
}

.nowrap {
    white-space: nowrap;
}

.lj_progresscontainer {
    height: 25px;
    width: 400px;
    margin: 1em;
    background: url(/img/progress/inactive.gif) repeat;
}

.lj_progressoverlay {
    background: url(/img/progress/active.gif) repeat;
}

.lj_progressindefinite {
    background-image: url(/img/progress/barber.gif);
}

.lj_hourglass {
        z-index: 20000;
}

.ErrorNote .Inner {
    background-color: #FFEEEE;
    background-repeat: repeat-x;
    border: 1px solid #FF9999;
    padding: 8px;
}

.Note .Inner {
    background: #FFFFDD;
    border: 1px solid #FFCC33;
    padding: 8px;
}

.helper {
    font-size: 0.8em;
    color: #666;
}

div.lj_ippu {
    background-color: #fff;
    border: 2px solid #444;
    padding: 2px;
}

div.lj_ippu_titlebar {
    background-color: #444;
    height: 20px;
    font-weight: bold;
    color: #fff;
    width: auto !important;
    padding: 5px 0 0 5px;
}

    div.lj_ippu_titlebar div {
        
    }
    div.lj_ippu_titlebar A:link,
    div.lj_ippu_titlebar A:visited {
        color:#FFF;
        text-decoration: none;
        border: none !important;
    }
    .lj_ippu_titlebar img {
        opacity: .25;
    }
    
        .lj_ippu_titlebar img:hover {
            opacity: 1;
        }

.vgift-img-l {
    max-width: 220px;
    max-height: 220px;
}

.vgift-img-s {
    max-width: 100px;
    max-height: 100px;
}

.LJ_Placeholder_Container {
    position:relative;
    display:-moz-inline-box;
    display:inline-block;
    border:1px dashed #ccc;
    }
.LJ_Placeholder_Container A {
    position:relative;
    top:50%;
    left:50%;
    visibility:hidden;
    }
.LJ_Placeholder_Container A IMG {
    margin:-17px 0 0 -17px;
    cursor:pointer;
    position:relative;
    visibility:visible;
    }
IFRAME.lj_embedcontent {
    border:0;
    vertical-align:top;
    }
.ljhidden {
        display: block;
        position: absolute;
        left: 0;
        top: 0;
        width: 0;
        height: 0;
        margin: 0;
        border: 0;
        padding: 0;
        font-size: 0.1px;
        line-height: 0;
        opacity: 0;
        filter: alpha(opacity=0);
}

.lj_pollanswer {
}

.lj_pollanswer_loading {
        color: #CCC;
        border: 1px solid #EEE;
}

.super {
    vertical-align: super;
    font-size: .7em;
}

.notice {
    color: #f00;
}

.ljedittime {
    font-size: smaller;
}

.warning-background {
    background-image: url('/img/message-warning.gif');
}

.lj_invisible {
    display:-moz-inline-box;
    display:inline-block;
    line-height:0;
    width:0;
    height:0;
    padding:0;
    border:0 none transparent;
    margin:0;
    overflow:hidden;
    text-decoration:none;
}


/* Link to current LJ.com version 
------------------------------------ */
DL.current-version {
    margin: 10px 0;
    padding: 0;
    border: 0;
    text-align: left;
    }
    DL.current-version DT,
    DL.current-version DD {
        display: inline;
        margin: 0;
        padding: 0 3px 0 0;
        text-align: left;
        white-space: nowrap;
        font-size: 11px !important;
        font-weight: normal;
        }


/* transparency for ie */
.lj_embedcontent { zoom:expression(runtimeStyle.zoom = '1',allowTransparency = true); }

/* WLMInterstitial */
.wlm-interstitial {
    text-align:left;
    padding:20px 230px 10px 10px;
    background:url(/img/lj_wlm/interstitial-screenshot.jpg) no-repeat 274px 3px;
    }
    .wlm-interstitial H1 {
        font-size:2.6em;
        text-transform:uppercase;
        color:#375991;
        }
    .wlm-interstitial FIELDSET {
        border:0;
        padding:10px 0 0;
        margin:0;
        }
        .wlm-interstitial FIELDSET UL,
        .wlm-interstitial FIELDSET LI {
            padding:0;
            margin:0;
            display:block;
            list-style:none;
            }
        .wlm-interstitial FIELDSET UL {
            padding-bottom:10px;
            }
        .wlm-interstitial FIELDSET .wlm-submit-button {
            width:55px;
            }
.lj_ippu_titlebar {
    text-align:left;
    }
.lj_ippu_titlebar IMG {
    cursor:pointer;
    }

.opera-filter { display:none; }
HTML:first-child .opera-filter { display:block; } /* opera lt 9.5 */
HTML:not(IE7) .opera-filter, x:-o-prefocus { display:block; } /* opera gte 9.5 */


.user_alias_act {
	padding: 13px 24px;
	text-align: left;
	font-size: 16px;
	}
	.user_alias_act INPUT {
	    font-family: Arial, sans-serif;    
	    }
		.user_alias_act .alias-value {
			width: 380px;
			}
	.user_alias_act P {
		margin: .75em 0px;
		text-indent: 0;
	    }
	.user_alias_act DIV.user-alias-label {
		padding-top: 5px;
		margin-bottom: 5px;
	    font-size: 0.85em;
	    }
	.user_alias_act SPAN.helper {
		padding-top: 12px;
		display: block;
		color:#000;
		font-size: 0.7em;
		}
        .user_alias_act A:link,
        .user_alias_act A:visited,
        .user_alias_act A:hover,
        .user_alias_act A:active {
              border: 0 !important;
              text-decoration: underline;
              }
        .user_alias_act A:link{
            color: #0000CC;
            }
        .user_alias_act A:visited {
            color: #330066;
            }
        .user_alias_act A:link:hover {
            color: #0000CC;
            }
        .user_alias_act A:visited:hover {
            color: #330066;
            }
        .user_alias_act A:link:active {
            color: #0000CC;
            }
        .user_alias_act A:visited:active {
            color: #330066;
            }

/* Styles for messagers,
Must be removed after implementation of Framework! */
.b-message {
    padding: 8px;
    margin: 10px 0 24px;
    }
.b-message-suggestion {
    background: #FFE8BF;
    border: 1px solid #FF8E44;
    }

.i-message {
    padding: 1px 8px;
    }
.b-message-error,
.i-message-error {
	margin: 0 0 24px !important;
    border: 1px solid #F99;
    background-color: #FEE;
    background-image: url(/img/message-error.gif);
    background-image: -moz-linear-gradient(100% 100% 90deg, #FED4D3, #FFF2F0);
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFF2F0), to(#FED4D3));
    }

/* Disabled block
--------------------------- */
/* Must be removed after implementation of Framework! */
.st-disabled {
    position:relative;
    }

/* Blocking layer */
.b-blocker {
    position:absolute;
    top:0;
    left:0;
    display:none;
    width:100%;
    height:100%;
    }
    .st-disabled .b-blocker {
        display:block;
        }
    .b-blocker-over {
        z-index:1000000000;
        }
    .b-blocker-white {
        background:#FFF;
        }
    .b-blocker-gray {
        background:#808080;
        }
    .b-blocker-gray,
    .b-blocker-white {
        -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
        filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
        opacity:.5;
        }

/* Block for adding HTML into headers.
It must be invisible, use it only for reskining */
.b-reskining-header {
	display: none;
	}

/* List of [un]changed inputs
--------------------------- */
/* Must be removed after implementation of Framework! */
.b-form-changelist .type-text {
	color:#808080;
	}
	.b-form-changelist .type-text:focus,
	.b-form-changelist .type-text-focus,
	.b-form-changelist .type-text-changed {
		color:#000;
		}

/* Flexible banner*/
/* Must be removed after implementation of Framework! */
.b-banner-flexible {
	margin: 0 0 12px;
	font-size: 0;
	line-height: 0;
	width: 970px;
	}
	.b-banner-flexible:after {
	    content: " ";
	    display: block;
	    visibility: hidden;
	    clear: both;
	    height: 0;
	    font-size: 0;
	    line-height: 0;
		}
	.b-banner-flexible .b-banner-728 {
		float: right;
		width: 728px;
		}
	.b-banner-flexible .b-banner-236 {
		float: left;
		overflow: hidden;
		width: 236px;
		}
	.b-banner-flexible A:link,
	.b-banner-flexible A:visited,
	.b-banner-flexible A:hover,
	.b-banner-flexible A:active {
	    border:0;
	    }

/* AdNEctar style for vgift */
.i-vgift-details {
	position: relative;
	padding: 0;
	margin: 0;
	zoom:1;
	}
	.i-vgift-details A {
		display: block;
		position: relative;
		border: 0 !important;
		}
		.i-vgift-details A:hover {
			border: 0 !important;
			}
.adnectar-play {
	position: absolute;
	bottom: 0;
	left: 0;
	display: block;
	width: 20px;
	height: 15px;
	background: url(/img/play-button.png) no-repeat;
	}
.appwidget-friendbirthdays .adnectar-play {
	display: none;	
	}

/* Button for ads */
/* Must be removed after implementation of Framework! */
.b-button-close {
    width: 15px;
    height: 15px;
    background: url(/img/CloseButton2.gif) no-repeat;
    position: relative;
    top: 0;
    margin: -25px -25px 0 10px;
    cursor: pointer;
    }

/* Width & Height for Moods */
IMG.meta-mood-img {
    max-width: 100px;
    max-height: 100px;
    } 
IMG#mood_image_preview {
    max-width: 60px;
    max-height: 60px;
    }

/* The indicator of something new  */
/* Must be removed after implementation of Framework! */
SUP.i-new {
	position: relative;
	bottom: 0.5em; 
	padding: 0 1px;
	vertical-align: middle;
	font-size: 11px;
	color: #C00;
    }


/* Popup Messages */
.b-popup {
	}
.b-popup-messagebox {
	position:absolute;
	width:311px;
	background:#FFF;
	border:2px solid #8CB7DA;
	font-size:12px;
	}
	.b-popup-messagebox .b-popup-head {
		position:relative;
		margin:0;
		padding:5px;
		border:1px solid #DBECFB;
		border-width:1px 1px 0;
		background:#C7E0F6;
		font-size:15px;
		}
		.b-popup-messagebox .b-popup-head H4 {
			margin:0;
			}
	.b-popup-messagebox .i-popup-close {
		position:absolute;
		top:9px;
		right:5px;
		width:12px;
		height:12px;
		background:url(/img/popup-close.gif) no-repeat 0 0;
		cursor:pointer;
		}
	.b-popup-messagebox .b-popup-content {
		margin:0;;
		padding:5px;
		font-size:13px;
		}
	.b-popup-messagebox .b-popup-footer {
		margin:0;
		padding:5px;
		background:#ECF6FF;
		text-align:center;
		font-size:13px;
		}

/* Styles for messagers,
Must be removed after implementation of Framework! */
.appwidget-sitemessages {
	position: absolute;
	top: 100px;
	left: 0;
	z-index: 9999;
	width: 100%;
	padding: 0;
	margin: 0;
	}
	.appwidget-sitemessages .b-message-system {
		padding: 0;
		margin: 0;
		background: none;
		border: none;
		font-size: 12px;
		color: #000;
		}
	.appwidget-managesitemessages .b-message-system {
		position: static !important;
		}
		.appwidget-sitemessages .b-message-system SPAN {
			position: relative;
			display: block;
			padding: 4px 25px 6px 25px;
			margin: 0;
			background: #C6E0F6;
		    border: 2px solid #8AB6DA;
			text-align: center;
			}
		.appwidget-sitemessages .b-message-system IMG {
			padding: 0 !important;
			margin: 0 5px 0 0 !important;
			vertical-align: -2px;
			}
		.appwidget-sitemessages .b-message-system A:link,
		.appwidget-sitemessages .b-message-system A:visited,
		.appwidget-sitemessages .b-message-system A:hover,
		.appwidget-sitemessages .b-message-system A:active {
			color: #124787;
			}
		.appwidget-sitemessages .b-message-system I.close {
			position: absolute;
			top: 8px;
			right: 8px;
			width: 12px;
			height: 12px;
			background: url(/img/message-system-close.gif) no-repeat;
			cursor: pointer;
			font-size: 0;
			}
#lj_controlstrip .appwidget-sitemessages {
	top: 44px;
	}
#content-wrapper .appwidget-sitemessages {
	position: static;
	margin-top: 20px;
	}
	#content-wrapper .appwidget-sitemessages .b-message-system {
	    margin: 0 0 10px;
	    }
	

